# low-voltage

./: .codespellrc  .envrc  .rustfmt.toml  Cargo.toml  flake.nix
src/: battery_info.rs  battery_interface.rs  device.rs  lib.rs
src/battery_info/: battery_level.rs  device_state.rs  device_type.rs  time_until.rs  warning_level.rs
src/battery_interface/: upower.rs
src/battery_interface/upower/: utils.rs
