[package]
name = "low-voltage"
version = "0.1.0"
edition = "2021"
authors = ["Joakim Paulsson"]
license = "MIT"
description = "Simple library to query battery information on laptops"

[dependencies]
anyhow = "1.0.86"
once_cell = "1.19.0"
regex = "1.10.5"
seq-macro = "0.3.5"
zbus = "4.2.2"

[dev-dependencies]
insta = "1.39.0"
